manifests/ingress/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata: 
  name: sample-ingress
  namespace: ingress-basic
spec:
  rules: 
  - http:
      paths: 
      - backend:
          serviceName: sample-service
          servicePort: 80
